# payment_purpose_classification

./: config.py  database.py  main.py  model_config.yaml  model_service.py  models.py  pipeline.py  pyproject.toml  readme.md  trainer.py  utils.py  worker.py
data_annotation/: auth.py  data_annotation.py  prompts.yaml
notebooks/: FastText_exp.ipynb  data_labeling.ipynb  purpose_EDA.ipynb  sampling_alg_vizualize.ipynb
